--- a/src/pages/ContactPage.css
+++ b/src/pages/ContactPage.css
@@ -1,15 +1,3 @@
-/* Styling for page header */
-.header-container {
-
-    /* TODO denne gjør at headern er for kort */
-    height: 25vh;
-}
-
-.text-container {
-    margin-top: 5%;
-}
-
-/* Styling for page */
 .contact-page-container{
     height: 69vh;
     display: grid;
